@@ -19,6 +19,8 @@
 package org.apache.pig.test;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertTrue;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNull;
 
 import java.io.IOException;
@@ -27,6 +29,7 @@ import org.apache.pig.EvalFunc;
 import org.apache.pig.builtin.INDEXOF;
 import org.apache.pig.builtin.LAST_INDEX_OF;
 import org.apache.pig.builtin.REPLACE;
+import org.apache.pig.builtin.STARTSWITH;
 import org.apache.pig.builtin.STRSPLIT;
 import org.apache.pig.builtin.SUBSTRING;
 import org.apache.pig.builtin.TRIM;
@@ -173,5 +176,14 @@ public class TestStringUDFs {
         assertEquals(2, splits.size());
         assertEquals("foo", splits.get(0));
         assertEquals("bar:baz", splits.get(1));
+    }
+
+    @Test
+    public void testStartsWith() throws IOException {
+        STARTSWITH startsWith = new STARTSWITH();
+        Tuple testTuple1 = Util.buildTuple("foo", "bar");
+        assertFalse("String prefix should not match", startsWith.exec(testTuple1));
+        Tuple testTuple2 = Util.buildTuple("foobaz", "foo");
+        assertTrue("String prefix should match", startsWith.exec(testTuple2));
     }
 }
